# h-memo

./: .env.example  .gitignore  AGENTS.md  README.md  firestore.rules  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
.github/: dependabot.yml
.github/workflows/: auto-version.yml  ci.yml  macos-tauri.yml  web-pages.yml  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: build-macos.md  build-windows.md  cross-platform-sync-roadmap.md  firebase-setup.md  public-repo-security.md  release.md  web-roadmap.md  windows-smoke-test.md
scripts/: auto-version-workflow.test.ts  build-macos-internal.mjs  bump-version.mjs  bump-version.test.ts  check-firebase-env.mjs  check-firebase-env.test.mjs  check-firebase-env.test.ts  check-version-consistency.mjs  check-version-consistency.test.mjs  check-version-consistency.test.ts  firebase-setup-doc.test.ts  firestore-rules-emulator.test.ts  firestore-rules-policy.test.ts  macos-build-scripts.test.ts  macos-workflow.test.ts  public-repo-security.test.ts  run-vitest.mjs  run-vitest.test.ts  run-workspace-script.mjs  tauri-macos-config.test.ts  tauri-tray-behavior.test.ts  tauri-window-permissions.test.ts  test-boundaries.test.ts  verify-windows-artifacts.mjs  verify-windows-artifacts.test.mjs  verify-windows-artifacts.test.ts  web-pages-workflow.test.ts  web-tsconfig-boundary.test.ts  windows-artifact-signing-workflow.test.ts  windows-workflow.test.ts
(+73 files in other folders)
